新增浮动与定位笔记

--- a/盒模型笔记.md
+++ b/盒模型笔记.md
@@ -343,3 +343,49 @@ border-width 可以用来指定四个方向边框的宽度值的情况：
                                     visible 默认值，元素在页面中正常显示
 
                                     hidden 元素在页面中隐藏 不显示，但是依然占据页面的位置
+
+## 默认样式
+
+              **reset.css** 直接去除了浏览器的默认样式
+
+               **normalize.css** 对默认样式进行统一
+
+
+
+## 盒子的尺寸
+
+定义：默认情况下，盒子可见框的大小由内容区、内边距、和边框共同决定
+
+特殊用法：
+
+                box-sizing 用来设置盒子尺寸的计算方式：
+
+                                  content-box 默认值，宽度和高度用来设置内容区的大小
+
+                                   border-box 宽度和高度用来设置整个盒子的大小
+
+
+
+## 轮廓和圆角
+
+**阴影**：**box-shadow** 用来设置元素的阴影效果，阴影不会影响页面的布局
+
+                用法：第一个值 左侧偏移量 设置阴影的水平位置 正值向右移动 负值向左移动
+
+                            第二个值 垂直偏移量 设置阴影的垂直位置 正值向下移动 负值向上移动
+
+                            第三个值 阴影的模糊半径
+
+                            第四个值 阴影的颜色
+
+                用例：box-shadow:10px 10px 50px rgba(0, 0, 0,.5)
+
+**轮廓线：outline** 用来设置元素的轮廓线，用法和border一样
+
+                轮廓和边框不同的点，就是轮廓不会影响到可见框的大小
+
+**圆角：border-radius**用来设置圆角 圆角设置的圆的半径大小
+
+            用例：border-radius: 50%可以将元素设置为一个圆形
+
+            
